<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitleTV"
        style="@style/DialogTitleStyle"
        android:text="@string/fragment_add_store_products_range"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/goods0CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitleTV" />

    <CheckBox
        android:id="@+id/goods1CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods0CB" />

    <CheckBox
        android:id="@+id/goods2CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods1CB" />

    <CheckBox
        android:id="@+id/goods3CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods2CB" />

    <CheckBox
        android:id="@+id/goods4CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods3CB" />

    <CheckBox
        android:id="@+id/goods5CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods4CB" />

    <CheckBox
        android:id="@+id/goods6CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods5CB" />

    <CheckBox
        android:id="@+id/goods7CB"
        style="@style/DialogStyleCB"
        android:text="@string/product_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods6CB" />

    <Button
        android:id="@+id/setProductsRangeButton"
        style="@style/AuthButton"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/profile_message_birthday_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods7CB" />

</androidx.constraintlayout.widget.ConstraintLayout>