<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveStoreInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameOutletTV"
                style="@style/AddStoreStyle"
                android:text="@string/fragment_add_store_name_of_outlet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/typeTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="end"
                android:text="@string/fragment_add_store_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameOutletTV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taxNumberTV"
                style="@style/AddStoreStyle"
                android:text="@string/fragment_add_store_tax_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTV" />

            <TextView
                android:id="@+id/taxNumber_1_TV"
                style="@style/AddStoreStyle"
                android:text="@string/fragment_add_store_tax_number_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taxNumberTV" />

            <TextView
                android:id="@+id/actualAddressTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:text="@string/fragment_add_store_address_actual"
                app:layout_constraintEnd_toStartOf="@+id/taxNumberTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameOutletTV" />

            <TextView
                android:id="@+id/legalAddressTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:text="@string/fragment_add_store_address_legal"
                app:layout_constraintEnd_toStartOf="@+id/taxNumber_1_TV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actualAddressTV" />

            <TextView
                android:id="@+id/phoneTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legalAddressTV" />

            <TextView
                android:id="@+id/emailTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

            <TextView
                android:id="@+id/lprTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_lpr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTV" />

            <TextView
                android:id="@+id/paymentsTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_payment_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lprTV" />

            <TextView
                android:id="@+id/productsTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_products_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paymentsTV" />

            <TextView
                android:id="@+id/marketTypeTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_market_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productsTV" />

            <TextView
                android:id="@+id/companyTypeTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_company_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketTypeTV" />

            <TextView
                android:id="@+id/workTimeTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_work_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyTypeTV" />

            <TextView
                android:id="@+id/dealerTV"
                style="@style/AddStoreStyle"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/fragment_add_store_dealer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workTimeTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveStoreInfoButton"
        style="@style/AuthButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_rounded_standard"
        android:text="@string/fragment_add_store_save_info_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>